--- a/GoldenScent Test/View/Base.lproj/Main.storyboard
+++ b/GoldenScent Test/View/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,114 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GoldenScent_Test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cid-DU-9ad">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="667"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="a6r-9g-8Q4"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryTableViewCell" rowHeight="142" id="jRr-SY-N4Y" customClass="CategoryTableViewCell" customModule="GoldenScent_Test" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="150" height="142"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jRr-SY-N4Y" id="Yjp-jb-E7H">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="142"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FF8-AC-Ljs" customClass="ShadowView" customModule="GoldenScent_Test" customModuleProvider="target">
+                                                    <rect key="frame" x="8" y="8" width="134" height="126"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_makeup" translatesAutoresizingMaskIntoConstraints="NO" id="o0r-Ey-yiS">
+                                                            <rect key="frame" x="32" y="8" width="70" height="70"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="o0r-Ey-yiS" secondAttribute="height" multiplier="1:1" id="C35-Am-jQ6"/>
+                                                                <constraint firstAttribute="height" constant="70" id="TeR-L9-VqI"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Makeup" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jcy-Gy-97W">
+                                                            <rect key="frame" x="8" y="94" width="118" height="11"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OYb-7U-duV">
+                                                            <rect key="frame" x="0.0" y="121" width="134" height="5"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="5" id="sWf-a8-OJU"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="OYb-7U-duV" firstAttribute="top" secondItem="Jcy-Gy-97W" secondAttribute="bottom" constant="16" id="3Ay-kC-wfY"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Jcy-Gy-97W" secondAttribute="trailing" constant="8" id="3xl-31-qhi"/>
+                                                        <constraint firstAttribute="bottom" secondItem="OYb-7U-duV" secondAttribute="bottom" id="6hl-fV-Uzf"/>
+                                                        <constraint firstItem="Jcy-Gy-97W" firstAttribute="top" secondItem="o0r-Ey-yiS" secondAttribute="bottom" constant="16" id="Hlt-mh-jaY"/>
+                                                        <constraint firstItem="o0r-Ey-yiS" firstAttribute="centerX" secondItem="FF8-AC-Ljs" secondAttribute="centerX" id="LP7-Uc-Cho"/>
+                                                        <constraint firstItem="OYb-7U-duV" firstAttribute="leading" secondItem="FF8-AC-Ljs" secondAttribute="leading" id="LPu-fI-Jxk"/>
+                                                        <constraint firstAttribute="trailing" secondItem="OYb-7U-duV" secondAttribute="trailing" id="X25-Hm-aac"/>
+                                                        <constraint firstItem="Jcy-Gy-97W" firstAttribute="leading" secondItem="FF8-AC-Ljs" secondAttribute="leading" constant="8" id="fX7-Ua-rpt"/>
+                                                        <constraint firstItem="o0r-Ey-yiS" firstAttribute="top" secondItem="FF8-AC-Ljs" secondAttribute="top" constant="8" id="uhM-Nw-g1P"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                            <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="2"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                            <real key="value" value="2"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="FF8-AC-Ljs" firstAttribute="top" secondItem="Yjp-jb-E7H" secondAttribute="top" constant="8" id="JoD-si-Ad2"/>
+                                                <constraint firstAttribute="trailing" secondItem="FF8-AC-Ljs" secondAttribute="trailing" constant="8" id="Yuy-Qh-gdQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="FF8-AC-Ljs" secondAttribute="bottom" constant="8" id="fEc-a1-8bk"/>
+                                                <constraint firstItem="FF8-AC-Ljs" firstAttribute="leading" secondItem="Yjp-jb-E7H" secondAttribute="leading" constant="8" id="mi2-ry-5SA"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="imgIcon" destination="o0r-Ey-yiS" id="LWw-WH-jVd"/>
+                                            <outlet property="lblName" destination="Jcy-Gy-97W" id="MiN-Bf-3Zb"/>
+                                            <outlet property="viewIndicator" destination="OYb-7U-duV" id="ZKW-LN-JB7"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="1CY-Sc-9LF"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="GgO-Db-Vs8"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="cid-DU-9ad" secondAttribute="bottom" id="F6C-eb-Tmf"/>
+                            <constraint firstItem="cid-DU-9ad" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Z58-z9-NyQ"/>
+                            <constraint firstItem="cid-DU-9ad" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="e3g-kX-tGy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tblCategories" destination="cid-DU-9ad" id="4sS-u0-JvR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon_makeup" width="60" height="60"/>
+    </resources>
 </document>
