--- a/GoldenScent Test/View/Base.lproj/Main.storyboard
+++ b/GoldenScent Test/View/Base.lproj/Main.storyboard
@@ -111,39 +111,42 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner_makeup" translatesAutoresizingMaskIntoConstraints="NO" id="Cwp-nu-2Af">
-                                            <rect key="frame" x="8" y="0.0" width="244" height="78"/>
+                                            <rect key="frame" x="8" y="0.0" width="259" height="83"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="Cwp-nu-2Af" secondAttribute="height" multiplier="122:39" id="U3x-jY-Xu7"/>
                                             </constraints>
                                         </imageView>
                                         <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5C-Sj-JIO">
-                                            <rect key="frame" x="8" y="128" width="236" height="334"/>
+                                            <rect key="frame" x="8" y="133" width="251" height="329"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="1SH-t4-DjU">
-                                                    <rect key="frame" x="0.0" y="0.0" width="708" height="334"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="753" height="329"/>
                                                     <subviews>
                                                         <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q0o-VW-VBK">
-                                                            <rect key="frame" x="0.0" y="0.0" width="236" height="334"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="251" height="329"/>
                                                             <connections>
                                                                 <segue destination="3jt-DI-X2d" kind="embed" identifier="bestsellers_1" id="LvR-ea-QgQ"/>
                                                             </connections>
                                                         </containerView>
                                                         <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iyi-M3-r5T">
-                                                            <rect key="frame" x="236" y="0.0" width="236" height="334"/>
+                                                            <rect key="frame" x="251" y="0.0" width="251" height="329"/>
                                                             <connections>
                                                                 <segue destination="3jt-DI-X2d" kind="embed" identifier="bestsellers_2" id="sCD-MP-xOX"/>
                                                             </connections>
                                                         </containerView>
                                                         <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="joP-eK-tuA">
-                                                            <rect key="frame" x="472" y="0.0" width="236" height="334"/>
+                                                            <rect key="frame" x="502" y="0.0" width="251" height="329"/>
                                                             <connections>
                                                                 <segue destination="3jt-DI-X2d" kind="embed" identifier="bestsellers_3" id="iYf-7i-zH2"/>
                                                             </connections>
                                                         </containerView>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="joP-eK-tuA" firstAttribute="width" secondItem="Q0o-VW-VBK" secondAttribute="width" id="5cU-sJ-R9m"/>
+                                                        <constraint firstItem="joP-eK-tuA" firstAttribute="width" secondItem="iyi-M3-r5T" secondAttribute="width" id="7jG-6q-RAx"/>
+                                                        <constraint firstItem="iyi-M3-r5T" firstAttribute="leading" secondItem="Q0o-VW-VBK" secondAttribute="trailing" id="AAB-v5-Yxv"/>
+                                                        <constraint firstItem="Q0o-VW-VBK" firstAttribute="leading" secondItem="1SH-t4-DjU" secondAttribute="leading" id="C5u-0e-DjF"/>
                                                         <constraint firstItem="Q0o-VW-VBK" firstAttribute="width" secondItem="iyi-M3-r5T" secondAttribute="width" id="Lib-2d-5oB"/>
+                                                        <constraint firstItem="joP-eK-tuA" firstAttribute="leading" secondItem="iyi-M3-r5T" secondAttribute="trailing" id="hKG-Fs-5xE"/>
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
@@ -154,21 +157,20 @@
                                                 <constraint firstAttribute="bottom" secondItem="1SH-t4-DjU" secondAttribute="bottom" id="TfW-T8-0Wk"/>
                                                 <constraint firstItem="Q0o-VW-VBK" firstAttribute="width" secondItem="m5C-Sj-JIO" secondAttribute="width" id="gCz-KH-Lc2"/>
                                                 <constraint firstItem="1SH-t4-DjU" firstAttribute="top" secondItem="m5C-Sj-JIO" secondAttribute="top" id="qOv-6P-kHS"/>
-                                                <constraint firstItem="iyi-M3-r5T" firstAttribute="width" secondItem="m5C-Sj-JIO" secondAttribute="width" id="tGD-Hb-fIb"/>
-                                                <constraint firstAttribute="trailing" secondItem="1SH-t4-DjU" secondAttribute="trailing" constant="16" id="vjR-Lb-4ib"/>
+                                                <constraint firstAttribute="trailing" secondItem="1SH-t4-DjU" secondAttribute="trailing" constant="-16" id="vjR-Lb-4ib"/>
                                             </constraints>
                                         </scrollView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9tu-wm-KYe">
-                                            <rect key="frame" x="0.0" y="78" width="260" height="50"/>
+                                            <rect key="frame" x="0.0" y="83" width="275" height="50"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bestsellers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c1e-K9-ycN">
-                                                    <rect key="frame" x="8" y="14.5" width="87" height="21.5"/>
+                                                    <rect key="frame" x="8" y="14" width="87" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w0r-zw-fyL">
-                                                    <rect key="frame" x="197" y="10" width="55" height="30"/>
+                                                    <rect key="frame" x="212" y="10" width="55" height="30"/>
                                                     <state key="normal" title="View All">
                                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
@@ -185,7 +187,7 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8wb-wq-ge8">
-                                            <rect key="frame" x="50" y="461.5" width="194" height="0.5"/>
+                                            <rect key="frame" x="50" y="461.5" width="209" height="0.5"/>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="0.5" id="OI6-Z5-cnL"/>
@@ -395,7 +397,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <inset key="separatorInset" minX="50" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <inset key="separatorInset" minX="50" minY="0.0" maxX="8" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BestSellersTableViewCell" rowHeight="110" id="Jsr-Wf-mjf" customClass="BestSellersTableViewCell" customModule="GoldenScent_Test" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="110"/>
